--- a/style.css
+++ b/style.css
@@ -890,9 +890,6 @@ button.swiper-pagination-bullet {
             backface-visibility: hidden;
     -webkit-overflow-scrolling: touch; }
 
-.wrap {
-  padding-bottom: 50px; }
-
 .inner {
   width: 1100px;
   margin: 0 auto; }
@@ -939,6 +936,9 @@ button.swiper-pagination-bullet {
         -ms-flex: 0 0 30%;
             flex: 0 0 30%;
     border-left: 1px solid #d8d8d8; }
+
+.single-post .wrap {
+  padding: 50px 0; }
 
 .articles .main-content .main, .podcasts .main-content .main {
   width: 100%;
